--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,11 @@ javafx {
 
 repositories {
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
+    compile "com.google.crypto.tink:tink:1.2.2"
     implementation 'com.google.guava:guava:27.0.1-jre'
     testImplementation 'junit:junit:4.12'
 }
