--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
     compile group: 'org.jetbrains.xodus', name: 'xodus-utils', version: '1.3.0'
+    compile 'org.apache.commons:commons-crypto:1.0.0'
     implementation 'com.google.guava:guava:27.0.1-jre'
     testImplementation 'junit:junit:4.12'
 }
