--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,17 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.7'
 }
 
+sourceSets {
+    main {
+        resources {
+            srcDirs = ["src/main/resources"]
+            includes = ["*.fxml", "logo2.png"]
+        }
+    }
+}
+
 javafx {
-    modules = [ 'javafx.controls' ]
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 repositories {
@@ -15,7 +24,6 @@ repositories {
 
 dependencies {
     compile group: 'org.jetbrains.xodus', name: 'xodus-utils', version: '1.3.0'
-    compile 'org.apache.commons:commons-crypto:1.0.0'
     compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.61'
 
     implementation 'com.google.guava:guava:27.0.1-jre'
