Add password checking

--- a/build.gradle
+++ b/build.gradle
@@ -51,5 +51,5 @@ jar {
     doFirst {
         from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } } 
     }
-    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA' 
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF'
 }
