--- a/build.gradle
+++ b/build.gradle
@@ -53,3 +53,9 @@ jar {
     }
     exclude 'META-INF/*.RSA', 'META-INF/*.SF'
 }
+apply plugin: 'java'
+
+javadoc {
+    source = sourceSets.main.allJava
+    classpath = configurations.compile
+}
