--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ apply plugin: 'java'
 javadoc {
     source = sourceSets.main.allJava
     classpath = configurations.compile
+    options.memberLevel = JavadocMemberLevel.PRIVATE
 }
 task createPom {
     pom {
